--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasasna Recipe</a>
-    <a href="recipes/lobscouse.html">Lobscouse Recipe</a>
-    <a href="recipes/peaspudding.html">Peas Pudding Recipe</a>
+    <h1>Odin Recipes Ramen Hacks</h1>
+    <img src="images/RamenHack.jpg" alt="Ramen Hacks or tips to make ramen fancy">
+    <ul>
+      <li><a href="recipes/ramenburger.html">The Ramen Burger</a></li>
+      <li><a href="recipes/RamenCrustPizza.html">The Ramen-Crust Pizza</a></li>
+      <li><a href="recipes/RamenCarbonara.html">The Ramen Carbonara</a></li>
+      <li><a href="recipes/RamenLatkes.html">The Ramen Latkes</a></li>
+    </ul>
   </body>
 </html>
